--- a/src/main/resources/templates/info/standings.html
+++ b/src/main/resources/templates/info/standings.html
@@ -7,10 +7,10 @@
 		<div layout:fragment="content">
 			<h1 th:text="#{standings.title}"></h1>
 			<div class="row">
-				<div class="col-12 col-sm-6 col-md-4" th:if="${not #lists.isEmpty(standingsContainer.getForGroup(group))}" th:each="group : ${standingsContainer.groups}">
+				<div class="col-12 col-sm-6 col-md-4 mb-3" th:if="${not #lists.isEmpty(standingsContainer.getForGroup(group))}" th:each="group : ${standingsContainer.groups}">
 					<h2 th:text="#{'group.entry.'+ ${group}}"></h2>
-					<div class="table-responsive bg-light">
-						<table class="table small table-condensed table-centered table-info">
+					<div class="table-responsive">
+						<table class="table small table-sm table-striped">
 							<thead>
 								<tr class="active">
 									<th>#</th>
@@ -34,7 +34,7 @@
 									<td th:text="${teamStandings.numberOfLooses}"></td>
 									<td th:text="${teamStandings.numberOfGoals} + ':' + ${teamStandings.numberOfGoalsAgainst}"></td>
 									<td th:text="${teamStandings.numberOfGoalDifference}"></td>
-									<td class="bold" th:text="${teamStandings.numberOfPoints}"></td>
+									<td class="fw-bold" th:text="${teamStandings.numberOfPoints}"></td>
 								</tr>
 							</tbody>
 						</table>
@@ -43,7 +43,7 @@
 				<div class="col-12 col-sm-6 col-md-4">
 					<h2 th:text="#{standings.legend}"></h2>
 					<div class="table-responsive">
-						<table class="table small table-bordered table-secondary">
+						<table class="table small table-bordered table-success">
 							<tbody>
 							<tr>
 								<td class="active center">MP</td>
