bugfix delete match

--- a/src/main/resources/templates/matches/edit.html
+++ b/src/main/resources/templates/matches/edit.html
@@ -64,7 +64,7 @@
 					<div class="form-group">
 						<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
 						<button th:if="${createEditMatchCommand.isDeletable()}" type="button" sec:authorize="hasAuthority('PERM_DELETE_MATCH')" class="btn btn-danger"
-								data-toggle="modal" data-target="#confirm-delete" th:text="#{button.delete}"></button>
+								data-bs-toggle="modal" data-bs-target="#confirm-delete" th:text="#{button.delete}"></button>
 						<a href="#" th:href="@{${'/matches#' + createEditMatchCommand.matchId}}" class="btn btn-light" role="button" th:text="#{button.cancel}"></a>
 					</div>
 				</div>
