--- a/src/main/resources/templates/admin/lastlogins.html
+++ b/src/main/resources/templates/admin/lastlogins.html
@@ -9,7 +9,7 @@
 			<h1 th:text="#{lastlogins.title}"></h1>
             <div class="row">
                 <div class="col-12 col-sm-6 col-md-4">
-                    <div class="card" th:each="appUser : ${userList}">
+                    <div class="card mb-3" th:each="appUser : ${userList}">
                         <div class="card-header">
                             <span th:text="${appUser.username}"></span>
                             <span class="right" th:text="${#temporals.format(appUser.lastLogin, #messages.msg('app.dateformatWithSeconds'))}"></span>
