--- a/src/main/resources/templates/admin/lastlogins.html
+++ b/src/main/resources/templates/admin/lastlogins.html
@@ -8,13 +8,17 @@
 		<div layout:fragment="content">
 			<h1 th:text="#{lastlogins.title}"></h1>
             <div class="row">
-                <div class="col-12 col-sm-6 col-md-4">
-                    <div class="card mb-3" th:each="appUser : ${userList}">
+                <div class="col-12 col-sm-4" th:each="appUser : ${userList}">
+                    <div class="card mb-3">
                         <div class="card-header">
-                            <span th:text="${appUser.username}"></span>
-                        </div>
-                        <div class="card-body">
-                            <span th:text="${#temporals.format(appUser.lastLogin, #messages.msg('app.dateformatWithSeconds'))}"></span>
+                            <div class="row">
+                                <div class="col-3">
+                                    <span th:text="${appUser.username}"></span>
+                                </div>
+                                <div class="col-9 text-end">
+                                    <span th:text="${#temporals.format(appUser.lastLogin, #messages.msg('app.dateformatWithSeconds'))}"></span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
