--- a/src/main/resources/templates/admin/administration.html
+++ b/src/main/resources/templates/admin/administration.html
@@ -5,70 +5,55 @@
 	</head>
 	<body>
 		<div layout:fragment="content">
-            <div class="card mb-3">
-                <div class="card-header">
-                    <h5 class="card-title" th:text="#{administration.testdata.title}">Test Data Creation</h5>
+            <h5 th:text="#{administration.testdata.title}">Test Data Creation</h5>
+            <div class="row">
+                <div class="col-12 col-sm-6 mb-3">
+                    <a class="btn btn-primary" role="button" th:href="@{/administration/createRandomMatches}" th:text="#{administration.createRandomMatches}"></a>
                 </div>
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-12 col-sm-6 mb-3">
-                            <a class="btn btn-primary" role="button" th:href="@{/administration/createRandomMatches}" th:text="#{administration.createRandomMatches}"></a>
-                        </div>
-                        <div class="col-12 col-sm-6 mb-3">
-                            <a class="btn btn-primary" role="button" th:href="@{/administration/createDemoBets}" th:text="#{administration.demoBetsAllUsers}"></a>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12 col-sm-6 mb-3">
-                            <a class="btn btn-primary" role="button" th:href="@{/administration/createDemoResults}" th:text="#{administration.testResultsAllUsers}"></a>
-                        </div>
-                        <div class="col-12 col-sm-6 mb-3">
-                            <a class="btn btn-primary" role="button" th:href="@{/administration/createTestDataForAll}" th:text="#{administration.createTestDataForAll}"></a>
-                        </div>
-                    </div>
+                <div class="col-12 col-sm-6 mb-3">
+                    <a class="btn btn-primary" role="button" th:href="@{/administration/createDemoBets}" th:text="#{administration.demoBetsAllUsers}"></a>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-12 col-sm-6 mb-3">
+                    <a class="btn btn-primary" role="button" th:href="@{/administration/createDemoResults}" th:text="#{administration.testResultsAllUsers}"></a>
+                </div>
+                <div class="col-12 col-sm-6 mb-3">
+                    <a class="btn btn-primary" role="button" th:href="@{/administration/createTestDataForAll}" th:text="#{administration.createTestDataForAll}"></a>
+                </div>
+            </div>
+            <hr/>
 
+            <h5 th:text="#{administration.testdemousers.title}">Test Demo Users</h5>
             <form id="adminForm" th:action="@{/administration/save}" th:object="${adminFormCommand}" action="#" method="post" role="form">
-                <div class="card mb-3">
-                    <div class="card-header">
-                        <h5 class="card-title" th:text="#{administration.testdemousers.title}">Test Demo Users</h5>
-                    </div>
-                    <div class="card-body">
-                        <div class="row mb-3">
+                <div class="row mb-3">
+                    <div class="col-12 col-sm-6">
+                        <div class="row">
                             <div class="col-12 col-sm-6">
-                                <div class="row">
-                                    <div class="col-12 col-sm-6">
-                                        <label class="form-label" for="numberOfTestUsers" th:text="#{administration.numberOfTestUsers.title} + ':'"></label>
-                                        <input id="numberOfTestUsers" type="text" th:field="*{numberOfTestUsers}" class="form-control" />
-                                        <p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('numberOfTestUsers')}" th:errors="*{numberOfTestUsers}"></p>
-                                    </div>
-                                </div>
-                                <div class="row mt-3">
-                                    <div class="col-12 col-sm-6">
-                                        <button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
-                                    </div>
-                                </div>
+                                <label class="form-label" for="numberOfTestUsers" th:text="#{administration.numberOfTestUsers.title} + ':'"></label>
+                                <input id="numberOfTestUsers" type="text" th:field="*{numberOfTestUsers}" class="form-control" />
+                                <p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('numberOfTestUsers')}" th:errors="*{numberOfTestUsers}"></p>
+                            </div>
+                        </div>
+                        <div class="row mt-3">
+                            <div class="col-12 col-sm-6">
+                                <button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
                             </div>
                         </div>
                     </div>
                 </div>
-			</form>
+            </form>
+            <hr/>
+
             <div th:replace="~{fragments/delete_confirm :: delete_confirm_modal(href = '/administration/deleteAllUsers', id='deleteAllUsers')}"></div>
             <div th:replace="~{fragments/delete_confirm :: delete_confirm_modal(href = '/administration/deleteAllBetsAndMatches', id='deleteAllBetsAndMatches')}"></div>
-            <div class="card">
-                <div class="card-header">
-                    <h5 class="card-title" th:text="#{administration.dangerzone.title}">Danger Zone</h5>
+            <h5 th:text="#{administration.dangerzone.title}">Danger Zone</h5>
+            <div class="row">
+                <div class="col-12 col-sm-3 mb-3">
+                    <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteAllUsers" th:text="#{administration.deleteAllUsers}"></button>
                 </div>
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-12 col-sm-4 mb-3">
-                            <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteAllUsers" th:text="#{administration.deleteAllUsers}"></button>
-                        </div>
-                        <div class="col-12 col-sm-4 mb-3">
-                            <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteAllBetsAndMatches" th:text="#{administration.deleteAllBetsAndMatches}"></button>
-                        </div>
-                    </div>
+                <div class="col-12 col-sm-3 mb-3">
+                    <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteAllBetsAndMatches" th:text="#{administration.deleteAllBetsAndMatches}"></button>
                 </div>
             </div>
 		</div>
