--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -31,7 +31,7 @@
                 <div class="row mt-3">
                     <div class="col-6">
                         <div class="form-check text-start my-3">
-                            <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault" name="remember-me" checked>
+                            <input class="form-check-input" type="checkbox" id="flexCheckDefault" name="remember-me" checked>
                             <label class="form-check-label" for="flexCheckDefault">Auto-Login</label>
                             <span class="fas fa-info-circle" aria-hidden="true" data-toggle="tooltip"
                                   data-placement="top" th:title="#{login.autologin.tooltip}"></span>
