bugfix catalan language selector

--- a/src/main/resources/templates/fragments/language_selector.html
+++ b/src/main/resources/templates/fragments/language_selector.html
@@ -28,7 +28,7 @@
         </li>
         <li>
             <a th:href="${@languageUtil.buildUrl('ca')}" class="dropdown-item language">
-                <span class="fi" th:classappend="${@countryIconUtil.cssClassFor('ca')}"></span>
+                <span class="fi" th:classappend="${@countryIconUtil.cssClassFor('es-ct')}"></span>
                 <span th:text="' '+#{language.ca}"></span>
             </a>
         </li>
