no rounded icons

--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -14,7 +14,7 @@
 							<div class="row">
 								<div class="col-2">
                                     <a th:href="@{'/gallery/show/' + ${userDto.userProfileImageKey}}" th:attr="data-lightbox=${userDto.userProfileImageKey}">
-                                        <img th:if="${userDto.userProfileImageKey}" th:src="@{'/gallery/showthumb/' + ${userDto.userProfileImageKey}}" width="34" class="rounded-circle" alt="userImage"/>
+                                        <img th:if="${userDto.userProfileImageKey}" th:src="@{'/gallery/showthumb/' + ${userDto.userProfileImageKey}}" width="34" class="rounded" alt="userImage"/>
                                     </a>
 					  			</div>
                                 <div class="col-7 mt-2">
