--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -242,7 +242,7 @@
                         <li class="nav-item dropdown mt-1">
                             <a class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                                 <img th:src="@{'/gallery/showthumb/' + ${@webSecurityUtil.getCurrentUserProfileImageKey()}}"
-                                     th:alt="${@webSecurityUtil.getCurrentUsername()}" width="32" height="32" class="rounded-circle">
+                                     th:alt="${@webSecurityUtil.getCurrentUsername()}" width="32" height="32" class="rounded">
                             </a>
                             <ul class="dropdown-menu">
                                 <li>
