--- a/src/main/resources/templates/image/gallery.html
+++ b/src/main/resources/templates/image/gallery.html
@@ -15,7 +15,7 @@
 							<span class="fw-bold" th:text="${galleryGroup}"></span><br/>
 							<a th:each="imageCommand : ${groupedImageCommands.get(galleryGroup)}" th:href="@{'/gallery/show/' + ${imageCommand.imageKey}}"
 										th:title="${imageCommand.description}" th:attr="data-gallery='#blueimp-gallery-'+${imageCommand.galleryGroup}">
-								<img th:src="@{'/gallery/showthumb/' + ${imageCommand.imageKey}}" th:alt="${imageCommand.imageKey}" class="img-responsive mt-2 me-2 mb-2"/>
+								<img th:src="@{'/gallery/showthumb/' + ${imageCommand.imageKey}}" th:alt="${imageCommand.imageKey}" class="rounded img-responsive mt-2 me-2 mb-2"/>
 						    </a>
 						</div>
 					</div>
