--- a/src/main/resources/templates/profile/crop_image.html
+++ b/src/main/resources/templates/profile/crop_image.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
-	xmlns:sec="http://www.thymeleaf.org/extras/spring-security" layout:decorate="~{_layout}">
+	layout:decorate="~{_layout}">
 	<head>
 		<title th:text="#{user.image.cropping.title}"></title>
 		<link rel="stylesheet" th:href="@{/css/pages/croppie.css}" />
