--- a/src/main/resources/templates/admin/excel_import.html
+++ b/src/main/resources/templates/admin/excel_import.html
@@ -29,8 +29,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="card-footer bg-warning">
-                                <span class="fw-light" th:text="#{excel.download.hint.allMatchesDeleted}"></span>
+                            <div class="card-footer">
+                                <span class="text-danger" th:text="#{excel.download.hint.allMatchesDeleted}"></span>
                             </div>
                         </div>
                     </form>
