--- a/src/main/resources/templates/bet/others.html
+++ b/src/main/resources/templates/bet/others.html
@@ -59,15 +59,13 @@
                                 <div class="col-4">
                                     <span th:text="${bet.userName}" class="ranking-name"></span>
                                 </div>
-                                <div class="col-4">
+                                <div class="col-6">
                                     <span class="badge rounded-pill bg-success big-badge" th:classappend="${bet.getCssClassPenaltyWinnerOne()}"
                                           th:text="${bet.goalsTeamOne}"></span>
                                     <span> : </span>
                                     <span class="badge rounded-pill bg-success big-badge" th:classappend="${bet.getCssClassPenaltyWinnerTwo()}"
                                           th:text="${bet.goalsTeamTwo}"></span>
-                                </div>
-                                <div class="col-2">
-                                    <span class="badge rounded-pill bg-warning big-badge" th:text="${bet.points}"></span>
+                                    <span class="badge rounded-pill bg-warning big-badge ms-1" th:text="${bet.points}"></span>
                                 </div>
                             </div>
                         </div>
