--- a/src/main/resources/templates/profile/change_password.html
+++ b/src/main/resources/templates/profile/change_password.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
-	xmlns:sec="http://www.thymeleaf.org/extras/spring-security" layout:decorate="~{_layout}">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout" layout:decorate="~{_layout}">
 <head>
 	<title th:text="#{userprofile.changePassword.title}"></title>
 </head>
 <body>
     <div layout:fragment="content">
+        <div th:replace="~{fragments/alert :: alert_headline}"></div>
         <form id="changePasswordForm" th:action="@{/profile/changePassword}" th:object="${changePasswordCommand}" action="#" method="post" role="form">
             <div class="alert alert-danger" th:if="${#fields.hasErrors('global')}" th:errors="*{global}"></div>
             <div class="row">
