--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 	<div layout:fragment="content">
-		<form id="userForm" th:action="@{/user/edit}" th:object="${editUserCommand}" action="#" method="post" role="form">
+        <div th:replace="~{fragments/alert :: alert_headline}"></div>
+        <form id="userForm" th:action="@{/user/edit}" th:object="${editUserCommand}" action="#" method="post" role="form">
 			<div th:replace="~{fragments/delete_confirm :: delete_confirm_modal(href = '/user/' + ${editUserCommand.userId} + '/delete', id='confirm-delete')}"></div>
 			<div class="row">
 				<div class="col-12 col-sm-6 col-md-4">
