--- a/src/main/resources/templates/admin/administration.html
+++ b/src/main/resources/templates/admin/administration.html
@@ -5,6 +5,7 @@
 	</head>
 	<body>
 		<div layout:fragment="content">
+            <div th:replace="~{fragments/alert :: alert_headline}"></div>
             <h5 th:text="#{administration.testdata.title}">Test Data Creation</h5>
             <div class="row">
                 <div class="col-12 col-sm-6 mb-3">
