--- a/src/main/resources/templates/admin/configuration.html
+++ b/src/main/resources/templates/admin/configuration.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
-	xmlns:sec="http://www.thymeleaf.org/extras/spring-security" layout:decorate="~{_layout}">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout" layout:decorate="~{_layout}">
 	<head>
 		<title th:text="#{administration.config.title}"></title>
 	</head>
 	<body>
 		<div layout:fragment="content">
-			<div class="row">
+            <div th:replace="~{fragments/alert :: alert_headline}"></div>
+            <div class="row">
 				<div class="col-12 col-sm-6 col-md-4 mb-3">
 					<form id="changeLogLevelForm" th:action="@{/config/changeLogLevel}" th:object="${configurationCommand}" action="#" method="post" role="form">
 						<h2 th:text="#{administration.change.loglevel.title}"></h2>
