--- a/src/main/resources/templates/admin/excel_import.html
+++ b/src/main/resources/templates/admin/excel_import.html
@@ -1,41 +1,44 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
-	xmlns:sec="http://www.thymeleaf.org/extras/spring-security" layout:decorate="~{_layout}">
-	<head>
-		<title th:text="#{excel.import.title}"></title>
-	</head>
-	<body>
-		<div layout:fragment="content">
-			<h2 th:text="#{excel.import.title}"></h2>
-            <div class="row">
-                <div class="col-12 col-sm-6 col-md-4">
-                    <form th:action="@{/excelimport/upload}" th:object="${excelUploadCommand}" method="post" enctype="multipart/form-data" role="form">
-                        <div class="card">
-                            <div class="card-header">
-                                <div class="row">
-                                    <div class="col-12">
-                                        <span th:text="#{excel.upload.file}"></span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="card-body">
-                                <input id="myFile" type="file" th:field="*{myFile}" class="form-control btn btn-light btn-file" />
-                                <div class="row mt-3">
-                                    <div class="col-6">
-                                        <input type="submit" class="btn btn-primary" th:value="#{excel.upload.button}" />
-                                    </div>
-                                    <div class="col-6">
-                                        <a href="#" th:href="@{/excelimport/download/template}" th:text="#{excel.download.template}"></a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="card-footer">
-                                <span class="text-danger" th:text="#{excel.download.hint.allMatchesDeleted}"></span>
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout" layout:decorate="~{_layout}">
+<head>
+    <title th:text="#{excel.import.title}"></title>
+</head>
+<body>
+<div layout:fragment="content">
+    <div th:replace="~{fragments/alert :: alert_headline}"></div>
+    <h2 th:text="#{excel.import.title}"></h2>
+    <div class="row">
+        <div class="col-12 col-sm-6 col-md-4">
+            <form th:action="@{/excelimport/upload}" th:object="${excelUploadCommand}" method="post"
+                  enctype="multipart/form-data" role="form">
+                <div class="card">
+                    <div class="card-header">
+                        <div class="row">
+                            <div class="col-12">
+                                <span th:text="#{excel.upload.file}"></span>
                             </div>
                         </div>
-                    </form>
+                    </div>
+                    <div class="card-body">
+                        <input id="myFile" type="file" th:field="*{myFile}"
+                               class="form-control btn btn-light btn-file"/>
+                        <div class="row mt-3">
+                            <div class="col-6">
+                                <input type="submit" class="btn btn-primary" th:value="#{excel.upload.button}"/>
+                            </div>
+                            <div class="col-6">
+                                <a href="#" th:href="@{/excelimport/download/template}"
+                                   th:text="#{excel.download.template}"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <span class="text-danger" th:text="#{excel.download.hint.allMatchesDeleted}"></span>
+                    </div>
                 </div>
-			</div>
-		</div>
-	</body>
+            </form>
+        </div>
+    </div>
+</div>
+</body>
 </html>
