--- a/src/main/resources/templates/registration/registration.html
+++ b/src/main/resources/templates/registration/registration.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 <div layout:fragment="content">
-	<h2 th:text="#{registration.text}"></h2>
+    <div th:replace="~{fragments/alert :: alert_headline}"></div>
+    <h2 th:text="#{registration.text}"></h2>
 	<form id="registrationForm" th:action="@{/registration}" th:object="${registrationCommand}" action="#" method="post" role="form">
 		<div class="alert alert-danger" th:if="${#fields.hasErrors('global')}" th:errors="*{global}"></div>
 		<div class="row">
