--- a/src/main/resources/templates/user/create.html
+++ b/src/main/resources/templates/user/create.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
-	xmlns:sec="http://www.thymeleaf.org/extras/spring-security" layout:decorate="~{_layout}">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout" layout:decorate="~{_layout}">
 	<head>
 		<title th:text="#{user.create.title}"></title>
 	</head>
 	<body>
 		<div layout:fragment="content">
-			<form id="userForm" th:action="@{/user}" th:object="${createUserCommand}" action="#" method="post" role="form">
+            <div th:replace="~{fragments/alert :: alert_headline}"></div>
+            <form id="userForm" th:action="@{/user}" th:object="${createUserCommand}" action="#" method="post" role="form">
 				<div class="row">
 					<div class="col-12 col-sm-6 col-md-4">
 						<input type="hidden" th:field="*{userId}" class="form-control" />
