--- a/src/main/resources/templates/admin/systeminfo.html
+++ b/src/main/resources/templates/admin/systeminfo.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
-	xmlns:sec="http://www.thymeleaf.org/extras/spring-security" layout:decorate="~{_layout}">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout" layout:decorate="~{_layout}">
 	<head>
 		<title th:text="#{systeminfo.title}"></title>
         <link rel="stylesheet" th:href="@{/css/pages/systeminfo.css}" />
