--- a/src/main/resources/templates/profile/crop_image.html
+++ b/src/main/resources/templates/profile/crop_image.html
@@ -10,10 +10,10 @@
         <div layout:fragment="content">
             <div th:replace="~{fragments/alert :: alert_headline}"></div>
             <div class="row mt-3">
-                <div class="col-12 col-sm-6 col-md-4">
+                <div class="col-12 col-sm-6 col-md-4 h-75">
                     <h2 th:text="#{user.image.cropping.upload}"></h2>
                     <input id="upload" value="Choose a file" accept="image/jpeg" type="file" class="mb-3"/>
-                    <div id="croppie-container" class="croppie-container mb-5"></div>
+                    <div id="croppie-container" class="mb-5"></div>
                     <div class="mt-3">
                         <button id="crop-image" th:text="#{user.image.cropping.select.range}" class="btn btn-info"></button>
                         <button type="button" class="crop-image-rotate btn bg-secondary" data-deg="-90">
