--- a/src/main/resources/templates/admin/runtime_settings.html
+++ b/src/main/resources/templates/admin/runtime_settings.html
@@ -113,7 +113,7 @@
 					</div>
 					<div class="col-12 col-sm-6 mb-3">
                         <div class="row">
-                            <div class="col-12 col-sm-6">
+                            <div class="col-12 col-sm-6 mb-3">
                                 <h2 th:text="#{administration.runtime.configuration.joker}"></h2>
                                 <div class="row">
                                     <div class="col-6">
@@ -123,7 +123,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-sm-6">
+                            <div class="col-12 col-sm-6 mb-3">
                                 <h2 th:text="#{administration.runtime.configuration.registrationCode}"></h2>
                                 <div class="form-check">
                                     <input id="selfRegistrationEnabled" type="checkbox" th:field="*{runtimeSettings.selfRegistrationEnabled}" onchange="triggerCheckboxSelfRegistration()" class="form-check-input"/>
