--- a/src/main/resources/templates/admin/runtime_settings.html
+++ b/src/main/resources/templates/admin/runtime_settings.html
@@ -49,20 +49,19 @@
                         <p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('runtimeSettings.passwordForReset')}" th:errors="*{runtimeSettings.passwordForReset}">passwordForReset Error</p>
                     </div>
                     <div class="col-12 col-sm-6 mb-3">
-                        <div class="row mt-3">
-                            <div class="col-6 mb-2">
-                                <label for="timeZone" class="form-label" th:text="#{administration.runtime.configuration.timeZone}"></label>
+                        <h2 th:text="#{administration.runtime.configuration.timeZone}"></h2>
+                        <div class="row">
+                            <div class="col-8 mb-2">
                                 <select id="timeZone" th:field="*{runtimeSettings.timeZone}" class="form-select">
                                     <option th:each="timeZone : ${runtimeSettingsCommand.timeZoneIds}" th:text="${timeZone}" th:value="${timeZone}"></option>
                                 </select>
                                 <p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('runtimeSettings.timeZone')}" th:errors="*{runtimeSettings.timeZone}">timeZone Error</p>
                             </div>
-                            <div class="col-6 mb-2">
-                                <div class="mb-2">
-                                    <label for="currentTime" class="form-label" th:text="#{administration.runtime.configuration.currentTime} + ':'"></label>
-                                    <br/>
-                                    <span id="currentTime" th:text="${runtimeSettingsCommand.currentTime}"></span>
-                                </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 mb-2">
+                                <label for="currentTime" class="form-label" th:text="#{administration.runtime.configuration.currentTime} + ':'"></label>
+                                <span id="currentTime" th:text="${runtimeSettingsCommand.currentTime}"></span>
                             </div>
                         </div>
                     </div>
